tests/ui/lint/snapshots/unused_variable.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused variable
   ╭─[test.lis:3:7]
 2 │ fn main() {
 3 │   let x = 5;
   ·       ┬
   ·       ╰── never used
 4 │   ()
   ╰────
  help: Use this variable or prefix it with an underscore: `_x` · code: [lint.unused_variable]
