tests/ui/lint/snapshots/unused_variable_struct_field_explicit.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused variable
   ╭─[test.lis:6:18]
 5 │   let p = Point { x: 1 };
 6 │   let Point { x: foo } = p;
   ·                  ─┬─
   ·                   ╰── never used
 7 │   ()
   ╰────
  help: Use this variable or prefix it with an underscore: `_foo` · code: [lint.unused_variable]
