tests/ui/lint/snapshots/verbose_failure_propagation_if_let_option.snap
---
source: tests/ui/lint/mod.rs
---
  ● Verbose failure propagation
   ╭─[test.lis:3:11]
 2 │ fn first(x: Option<int>) -> Option<int> {
 3 │   let v = if let Some(v) = x {
   ·           ─┬
   ·            ╰── re-returns the failure by hand
 4 │     v
   ╰────
  help: Use `?` to propagate the failure concisely · code: [lint.verbose_failure_propagation]
