tests/ui/lint/snapshots/verbose_failure_propagation_result_match.snap
---
source: tests/ui/lint/mod.rs
---
  ● Verbose failure propagation
   ╭─[test.lis:3:11]
 2 │ fn first(x: Result<int, string>) -> Result<int, string> {
 3 │   let v = match x {
   ·           ──┬──
   ·             ╰── re-returns the failure by hand
 4 │     Ok(v) => v,
   ╰────
  help: Use `?` to propagate the failure concisely · code: [lint.verbose_failure_propagation]
