tests/ui/lint/snapshots/waitgroup_add_in_nested_task_covered_by_prior_add.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `WaitGroup.Go`
    ╭─[test.lis:9:5]
  8 │     defer wg.Done()
  9 │     wg.Add(1)
    ·     ────┬────
    ·         ╰── counts the next `task`
 10 │     task {
    ╰────
  help: Prefer `wg.Go(|| ...)`, which counts the task and starts it in one step and runs `Done` for you · code: [lint.manual_waitgroup_go]
