tests/ui/lint/snapshots/while_let_loop.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `while let`
   ╭─[test.lis:6:3]
 5 │   let mut it = xs
 6 │   loop {
   ·   ──┬─
   ·     ╰── can be a `while let`
 7 │     match it.get(0) {
   ╰────
  help: Replace the `loop` and `match` with `while let Some(v) = it.get(0)` · code: [lint.while_let_loop]
